samples/_failures_safe/1761429742_848085_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_148fc6c8.c: In function ‘main’:
./samples/SAFE/__tmp_148fc6c8.c:171:25: error: expected declaration or statement at end of input
  171 |                         if (result == 0) {
      |                         ^~
./samples/SAFE/__tmp_148fc6c8.c:171:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_148fc6c8.c:171:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_148fc6c8.c:171:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_148fc6c8.c:171:25: error: expected declaration or statement at end of input
